--- a/.github/workflows/ci-cron-log.yaml
+++ b/.github/workflows/ci-cron-log.yaml
@@ -5,7 +5,7 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  run-cron-timed-log:
+  run-cron-log:
     if: contains(github.event.head_commit.message, github.workflow)
     runs-on: ubuntu-latest
 
