--- a/.github/workflows/ci-hello-log.yaml
+++ b/.github/workflows/ci-hello-log.yaml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Print hello log
-        run: echo "Hello, CI with GitHub Actions"
+        run: echo "Hello, CI with GitHub Actions!"
